# cafe_django_project

./: .gitignore  pyproject.toml
django-project/: settings.env
django-project/authentication/: admin.py  forms.py  models.py  urls.py  views.py
django-project/authentication/api/: permissions.py  serializers.py  urls.py  views.py
django-project/authentication/migrations/: 0001_initial.py  0002_user_favorites_tables.py  0003_passwordresettoken.py
django-project/authentication/tests/: test_api_view_auth.py
django-project/project/: __init__.py  celery.py  middlewares.py  settings.py  urls.py
django-project/reservation/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
django-project/reservation/api/: filter.py  permissions.py  serializers.py  urls.py  views.py
django-project/reservation/migrations/: 0001_initial.py  0002_rename_tabel_reservation_table.py
django-project/reservation/tests/: test_api_view.py
django-project/tabel/: admin.py  apps.py  models.py  views.py
django-project/tabel/migrations/: 0001_initial.py
django-project/table/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
django-project/table/migrations/: 0001_initial.py  0002_remove_table_is_free.py  0002_tabel_is_free.py  0003_feature_table_feature.py  0004_alter_table_feature.py  0005_favorites.py
django-project/templates/: base.html  index.html  paginate.html
django-project/templates/auth/: error_login.html  login.html  register.html  reset_password.html  reset_request_password.html
scripts/: add_fake_data.py
(+7 files in other folders)
