[project]
name = "cafe-django-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.4",
    "django-debug-toolbar>=6.3.0",
    "django-unfold>=0.92.0",
    "faker>=40.15.0",
    "pillow>=12.2.0",
    "psycopg2>=2.9.12",
]
