[project]
name = "cafe-django-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.4",
    "django-debug-toolbar>=6.3.0",
    "django-filter>=25.2",
    "django-unfold>=0.92.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djoser>=2.3.3",
    "drf-spectacular>=0.29.0",
    "eventlet>=0.41.0",
    "faker>=40.15.0",
    "pillow>=12.2.0",
    "psycopg2>=2.9.12",
    "python-dotenv>=1.2.2",
]
